Added main arguments for running from command line.