@@ -2,9 +2,9 @@ package com.cannontech.analysis.report;
 
 import java.awt.BasicStroke;
 import java.awt.geom.Point2D;
+import java.util.Date;
 import java.util.Iterator;
 import java.util.Map;
-import java.util.Set;
 
 import org.jfree.report.Boot;
 import org.jfree.report.ElementAlignment;
@@ -31,6 +31,7 @@ import org.jfree.ui.FloatDimension;
 import com.cannontech.analysis.ReportFuncs;
 import com.cannontech.analysis.ReportTypes;
 import com.cannontech.analysis.tablemodel.ActivityModel;
+import com.cannontech.util.ServletUtil;
 
 /**
  * Created on Dec 15, 2003
@@ -83,22 +84,44 @@ public class ECActivityLogReport extends YukonReportBase
 
 		//Define start and stop parameters for a default 90 day report.
 		YukonReportBase report = ReportFuncs.createYukonReport(ReportTypes.EC_ACTIVITY_LOG_DATA);
-//		((ActivityModel)report.getModel()).setECIDs(new Integer(1010));
+		//Define default start and stop parameters for a default year to date report.
 		java.util.GregorianCalendar cal = new java.util.GregorianCalendar();
 		cal.set(java.util.Calendar.HOUR_OF_DAY, 0);
 		cal.set(java.util.Calendar.MINUTE, 0);
 		cal.set(java.util.Calendar.SECOND, 0);
 		cal.set(java.util.Calendar.MILLISECOND, 0);
-		cal.add(java.util.Calendar.DATE, 1);
+		cal.add(java.util.Calendar.DATE, 1);	//default stop date is tomorrow
 		long stop = cal.getTimeInMillis();
-//		cal.add(java.util.Calendar.DATE, -90);
+
 		cal.set(java.util.Calendar.DATE, 1);
 		cal.set(java.util.Calendar.MONTH, 0);
-		long start = cal.getTimeInMillis();
+		long start = cal.getTimeInMillis();	//default start date is begining of year
 
 		report.getModel().setStartTime(start);
 		report.getModel().setStopTime(stop);
-//		model.setEnergyCompanyID(new Integer(1004));
+
+		for (int i = 0; i < args.length; i++)
+		{
+			String arg = (String)args[i].toLowerCase();
+				
+			int startIndex = arg.indexOf('=');
+			startIndex += 1;
+			String subString = arg.substring(startIndex);				
+			
+			if( arg.startsWith("ec"))
+				report.getModel().setECIDs(Integer.valueOf(subString));
+			else if( arg.startsWith("start"))
+			{
+				Date startDate = ServletUtil.parseDateStringLiberally(subString);
+				report.getModel().setStartTime(startDate.getTime());
+			}
+			else if( arg.startsWith("stop"))
+			{
+				Date stopDate = ServletUtil.parseDateStringLiberally(subString);
+				report.getModel().setStartTime(stopDate.getTime());
+			}			
+		}
+		
 		report.getModel().collectData();
 
 		//Create the report
